--- a/rewards.html
+++ b/rewards.html
@@ -58,7 +58,9 @@
     <!-- NAVIGATION BAR: END -->
 
     <!-- LOYALTY PROGRAM: START -->
+    <!-- Header -->
     <h1 class="text-center mx-4 mx-lg-0 mt-5">Hu Else - Earn Your Way To The Top</h1>
+    <!-- Description -->
     <p class="text-center mx-4 mx-lg-0">Top three walks away with cash prizes worth up to <span class="text-danger"><strong>$8,888</strong></span> this CNY season!</p>
     <p class="text-center">15 Jan 2022 - 15 Feb 2022</p>
 
@@ -70,6 +72,7 @@
             <div class="row-sm ms-4 me-4">
                 <div class="container my-5">
                     <div class="row">
+                        <!-- Step 1 -->
                         <div class="col-sm-2 mx-0 mx-lg-4">
                             <p class="rewards-steps-icon">1</p>
                         </div>
@@ -80,6 +83,7 @@
                                 The more you spend, the more you earn.
                             </p>
                         </div>
+                        <!-- Step 2 -->
                         <div class="col-sm-2 mx-0 mx-lg-4">
                             <p class="rewards-steps-icon">2</p>
                         </div>
@@ -90,6 +94,7 @@
                                 such as discount vouchers, free shipping and more!
                             </p>
                         </div>
+                        <!-- Step 3 -->
                         <div class="col-sm-2 mx-0 mx-lg-4">
                             <p class="rewards-steps-icon">3</p>
                         </div>
@@ -106,6 +111,7 @@
         </div>
     </div>
     <!-- HOW IT WORKS SECTION: END -->
+    <!-- Note for user -->
     <div style="display: flex; justify-content: center; align-items: center;" class="mb-4 rewards-notes">
         <p>
             Note:
@@ -126,6 +132,7 @@
                 <span class="visually-hidden">Loading...</span>
             </div>
         </div>
+        <!-- Leaderboard Header -->
         <div class="row justify-content-center">
             <div class="col-lg-8">
                 <table class="table" id="leaderboard" style="display: none;">
