--- a/termsofservice.html
+++ b/termsofservice.html
@@ -60,6 +60,7 @@
 
     <!-- TERMS OF SERVICE: START -->
     <div class="container my-5">
+        <!-- Header -->
         <h2><strong>Terms of Service</strong></h2>
 
         <p>Welcome to COMZONE!</p>
