--- a/cart.html
+++ b/cart.html
@@ -1,72 +1,85 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- META -->
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <!-- TITLE -->
     <title>COMZONE - Singapore's #1 Customisable High Performance PC Builders</title>
+
     <!-- FAVICON -->
     <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico">
+
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+
     <!-- CSS -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/spinner.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
+
 <body class="d-flex flex-column min-vh-100">
     <!-- NAVIGATION BAR: START -->
     <div class="container">
         <nav class="navbar navbar-expand-sm navbar-light py-2">
-            <a href="index.html" class="navbar-brand"><strong>COM</strong>ZONE</a> <!-- BRAND LOGO -->
+            <!-- Company Logo -->
+            <a href="index.html" class="navbar-brand"><strong>COM</strong>ZONE</a>
+            <!-- Mobile Hamburger Menu -->
             <button
-                class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#toggleMobileMenu"
-                aria-controls="toggleMobileMenu"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-                >
-            <span class="navbar-toggler-icon"></span>
+                    class="navbar-toggler"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#toggleMobileMenu"
+                    aria-controls="toggleMobileMenu"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation"
+            >
+                <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="toggleMobileMenu">
+                <!-- Nav Bar Links -->
                 <ul class="navbar-nav ms-auto text-md-center">
                     <li><a href="explore.html" class="nav-link">Shop</a></li>
                     <li><a href="rewards.html" class="nav-link">Rewards</a></li>
                     <li><a href="support.html" class="nav-link">Support</a></li>
+                    <li><a href="cart.html" class="nav-link" id="cart-qty">Cart(0)</a></li>
                     <li id="account-button" class="nav-link"><img src="assets/img/index/user-interface.png" alt="" style="height: 20px;"></li>
                 </ul>
             </div>
         </nav>
     </div>
+    <!-- Nav Bar Bottom Border -->
     <div class="border-bottom"></div>
-
     <!-- NAVIGATION BAR: END -->
+
     <!-- CART: START-->
     <div class="container mb-5">
         <div class="row justify-content-between">
             <div class="col-md-9">
                 <h1 class="text-left mt-5">Cart</h1>
+                <!-- Empty Cart -->
                 <p id="cart-empty-text" style="display: none;">Your cart is empty.</p>
                 <div class="container" style="margin-top: -10px;">
                     <table class="table" id="cart-table" style="display: none;">
                         <thead>
-                        <th>Item</th>
-                        <th>Qty</th>
-                        <th>Price</th>
+                            <tr>
+                                <th>Item</th>
+                                <th>Qty</th>
+                                <th>Price</th>
+                            </tr>
                         </thead>
-                        <col span="1" style="width: 500px;">
                         <tbody></tbody>
                     </table>
                 </div>
             </div>
             <div class="col-md-3">
                 <div class="row justify-content-center align-center mt-5 mx-auto">
+                    <!-- Order Summary -->
                     <h4 class="text-left ps-0 mt-5 mb-3"><strong>Order Summary</strong></h4>
                     <div class="d-flex justify-content-between px-0">
                         <p class="ps-0">Subtotal</p>
@@ -86,10 +99,10 @@
                         </div>
                     </form>
                     <button id="check-out" class="btn btn-primary text-center mt-3">
-                        <div class="d-flex justify-content-between px-0">
-                            <p class="ps-0 my-auto"><strong>Check Out</strong></p>
-                            <img src="assets/img/cart/check-out-arrow.svg" width="25px" style="filter: invert(100%);">
-                        </div>
+                        <span class="d-flex justify-content-between px-0">
+                            <span class="ps-0 my-auto"><strong>Check Out</strong></span>
+                            <img src="assets/img/cart/check-out-arrow.svg" width="25" style="filter: invert(100%)" alt="Check Out Arrow Icon">
+                        </span>
                     </button>
                 </div>
                 <div id="errorMessage" class="mt-5"></div>
@@ -287,7 +300,7 @@
                     <h5 class="mb-4 text-uppercase">Contact Us</h5>
                     <!-- Address -->
                     <p>
-                        Blk 31, Ngee Ann Polytechnic
+                        Blk 31, Ngee Ann Polytechnic 
                         <br>
                         535 Clementi Rd, Singapore 599489
                     </p>
@@ -337,11 +350,11 @@
     </button>
     <!-- BACK TO TOP BUTTON: END -->
 
-
     <!-- JS -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/script.js"></script>
     <script src="js/cart.js"></script>
