--- a/checkout.html
+++ b/checkout.html
@@ -1,54 +1,61 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- META -->
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <!-- TITLE -->
     <title>COMZONE - Singapore's #1 Customisable High Performance PC Builders</title>
+
     <!-- FAVICON -->
     <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico">
+
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+
     <!-- CSS -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/spinner.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
+
 <body class="d-flex flex-column min-vh-100">
-<!-- NAVIGATION BAR: START -->
-<div class="container">
-    <nav class="navbar navbar-expand-sm navbar-light py-2">
-        <a href="index.html" class="navbar-brand"><strong>COM</strong>ZONE</a> <!-- BRAND LOGO -->
-        <button
-                class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#toggleMobileMenu"
-                aria-controls="toggleMobileMenu"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-        >
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="toggleMobileMenu">
-            <ul class="navbar-nav ms-auto text-md-center">
-                <li><a href="explore.html" class="nav-link">Shop</a></li>
-                <li><a href="rewards.html" class="nav-link">Rewards</a></li>
-                <li><a href="support.html" class="nav-link">Support</a></li>
-                <li id="account-button" class="nav-link"><img src="assets/img/index/user-interface.png" alt=""
-                                                              style="height: 20px;"></li>
-            </ul>
-        </div>
-    </nav>
-</div>
-<div class="border-bottom"></div>
-<!-- NAVIGATION BAR: END -->
+    <!-- NAVIGATION BAR: START -->
+    <div class="container">
+        <nav class="navbar navbar-expand-sm navbar-light py-2">
+            <!-- Company Logo -->
+            <a href="index.html" class="navbar-brand"><strong>COM</strong>ZONE</a>
+            <!-- Mobile Hamburger Menu -->
+            <button
+                    class="navbar-toggler"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#toggleMobileMenu"
+                    aria-controls="toggleMobileMenu"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation"
+            >
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="toggleMobileMenu">
+                <!-- Nav Bar Links -->
+                <ul class="navbar-nav ms-auto text-md-center">
+                    <li><a href="explore.html" class="nav-link">Shop</a></li>
+                    <li><a href="rewards.html" class="nav-link">Rewards</a></li>
+                    <li><a href="support.html" class="nav-link">Support</a></li>
+                    <li><a href="cart.html" class="nav-link" id="cart-qty">Cart(0)</a></li>
+                    <li id="account-button" class="nav-link"><img src="assets/img/index/user-interface.png" alt="" style="height: 20px;"></li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+    <!-- Nav Bar Bottom Border -->
+    <div class="border-bottom"></div>
+    <!-- NAVIGATION BAR: END -->
 <!-- CHECKOUT: START -->
 <div class="container mb-5">
     <div class="row justify-content-between">
@@ -60,13 +67,16 @@
                             <div class="card-header">
                                 <ul class="nav nav-pills justify-content-around" id="checkout-process" role="tablist">
                                     <li class="nav-item" style="width: 33% !important">
+                                        <!-- Tab One: Cart -->
                                         <a id="go-to-cart" class="nav-link text-center" href="cart.html">Cart</a>
                                     </li>
                                     <li class="nav-item" style="width: 33% !important">
+                                        <!-- Tab Two: Delivery -->
                                         <a class="nav-link active nav-tab text-center" href="#description" role="tab"
                                            aria-controls="description" aria-selected="true">Delivery</a>
                                     </li>
                                     <li class="nav-item" style="width: 33% !important">
+                                        <!-- Tab Three: Payments -->
                                         <a class="nav-link nav-tab text-center" href="#history" role="tab"
                                            aria-controls="history" aria-selected="false">Payment</a>
                                     </li>
@@ -74,8 +84,8 @@
                             </div>
                             <div class="card-body mx-3">
                                 <div class="tab-content mt-3">
-                                    <form class="tab-pane active" id="description" role="tabpanel">
-                                        <form class="needs-validation" novalidate>
+                                    <!-- Tab Two: Delivery -->
+                                        <form id="description" class="needs-validation tab-pane active" novalidate>
                                             <div class="row">
                                                 <div class="col-md-6 mb-3">
                                                     <label for="firstName">First name</label>
@@ -126,11 +136,11 @@
                                             </div>
                                             <div class="row" style="margin-bottom: -15px;">
                                                 <div class="col-md-5 mb-3">
-                                                    <label for="country">Country</label>
+                                                    <label>Country</label>
                                                     <p id="country">Singapore</p>
                                                 </div>
                                                 <div class="col-md-4 mb-3">
-                                                    <label for="city">City</label>
+                                                    <label>City</label>
                                                     <p id="city">Singapore</p>
                                                 </div>
                                             </div>
@@ -169,8 +179,8 @@
                                                     information for next time</label>
                                             </div>
                                         </form>
-                                    </form>
-                                    <div class="tab-pane" id="history" role="tabpanel" aria-labelledby="history-tab">
+                                    <div class="tab-pane" id="history">
+                                        <!-- Tab Three: Payments -->
                                         <div class="d-block my-3">
                                             <p class="mb-1">Payment Method</p>
                                             <div class="custom-control custom-radio">
@@ -239,6 +249,7 @@
         </div>
         <div class="col-lg-4">
             <div class="row justify-content-center align-center mt-5">
+                <!-- Order Summary -->
                 <h4 class="text-left ps-0 mt-5 mb-3"><strong>Order Summary</strong></h4>
                 <div class="d-flex justify-content-between px-0">
                     <p class="ps-0">Subtotal</p>
@@ -257,10 +268,10 @@
                     <p id="checkout-total" class="text-primary my-auto pe-0 py-3">$0.00</p>
                 </div>
                 <button id="complete-order" class="btn btn-primary text-center mt-3">
-                    <div class="d-flex justify-content-between px-0">
-                        <p class="ps-0 my-auto"><strong>Complete Order</strong></p>
-                        <img src="assets/img/cart/check-out-arrow.svg" width="25px" style="filter: invert(100%);">
-                    </div>
+                    <span class="d-flex justify-content-between px-0">
+                        <span class="ps-0 my-auto"><strong>Complete Order</strong></span>
+                        <img src="assets/img/cart/check-out-arrow.svg" width="25" style="filter: invert(100%)" alt="Check Out Arrow Icon">
+                    </span>
                 </button>
             </div>
             <div id="errorMessage" class="mt-5"></div>
@@ -480,7 +491,7 @@
                 <h5 class="mb-4 text-uppercase">Contact Us</h5>
                 <!-- Address -->
                 <p>
-                    Blk 31, Ngee Ann Polytechnic
+                    Blk 31, Ngee Ann Polytechnic 
                     <br>
                     535 Clementi Rd, Singapore 599489
                 </p>
@@ -504,15 +515,15 @@
             <div class="col-md-6">
                 <span>&copy; 2022 COMZONE. All Rights Reserved.<br></span>
                 <span style="font-size: 12px;">DESIGNED BY <a href="https://www.github.com/gg2shadow" class="text-decoration-none" target="_blank">XIAO YAOJIE</a> &
-                        <a href="https://www.github.com/iirquhs-np" class="text-decoration-none" target="_blank">SHUQRI SHAIFUDDIN</a></span>
+                    <a href="https://www.github.com/iirquhs-np" class="text-decoration-none" target="_blank">SHUQRI SHAIFUDDIN</a></span>
             </div>
             <!-- Policies -->
             <div class="col-md-6 mt-3">
                 <div class="text-start text-md-end">
-                        <span>
-                            <a href="termsofservice.html" class="text-white text-decoration-none">Terms of Service</a> |
-                            <a href="datanotice.html" class="text-white text-decoration-none">Data Protection Notice</a>
-                        </span>
+                    <span>
+                        <a href="termsofservice.html" class="text-white text-decoration-none">Terms of Service</a> |
+                        <a href="datanotice.html" class="text-white text-decoration-none">Data Protection Notice</a>
+                    </span>
                 </div>
             </div>
         </div>
@@ -530,7 +541,6 @@
 </button>
 <!-- BACK TO TOP BUTTON: END -->
 
-
 <!-- JS -->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
@@ -547,3 +557,5 @@
 <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </body>
 </html>
+
+
