--- a/support.html
+++ b/support.html
@@ -58,9 +58,11 @@
     <!-- NAVIGATION BAR: END -->
 
         <!-- FAQ: START -->
+        <!-- Header -->
         <h1 class="text-center mt-5">We're Here To Help You</h1>
         <div class="accordion mx-auto d-block mt-4 mb-4 faq" style="width: 60%;" id="accordionExample">
             <div class="accordion-item">
+                <!-- FAQ 1 -->
                 <h2 class="accordion-header" id="headingOne">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                     What payment methods does COMZONE support?
@@ -95,6 +97,7 @@
                 </div>
             </div>
             <div class="accordion-item">
+                <!-- FAQ 2 -->
                 <h2 class="accordion-header" id="headingTwo">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                     My system is out of warranty do I still get any support?
@@ -109,6 +112,7 @@
                 </div>
             </div>
             <div class="accordion-item">
+                <!-- FAQ 3 -->
                 <h2 class="accordion-header" id="headingThree">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                     How does COMZONE support upgrading of systems? Does COMZONE buy back any old components?
@@ -124,6 +128,7 @@
                 </div>
             </div>
             <div class="accordion-item">
+                <!-- FAQ 4 -->
                 <h2 class="accordion-header" id="headingFour">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                     Where are COMZONE systems assembled?
@@ -137,6 +142,7 @@
                 </div>
             </div>
             <div class="accordion-item">
+                <!-- FAQ 5 -->
                 <h2 class="accordion-header" id="headingFive">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
                     What is included in the COMZONE system package?
@@ -161,6 +167,7 @@
                 </div>
             </div>
             <div class="accordion-item">
+                <!-- FAQ 6 -->
                 <h2 class="accordion-header" id="headingSix">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
                     Are there any additional taxes when purchasing from COMZONE?
@@ -182,7 +189,7 @@
             </div>
         </div>
         <!-- FAQ: END -->
-        <!-- CONTACT FORM: START -->
+        
         <p class="text-center mt-3">Can't find your answers? Contact Us.</p>
     <!-- CONTACT FORM: START -->
     <div class="contact-us d-block px-4 px-lg-0 mx-0 mx-lg-auto mb-5">
